# ainigma

./: .gitignore  Cargo.toml  README.md  course.toml  course_test.toml
.github/workflows/: rust.yml
ainigma/: Cargo.toml  design.md
ainigma-backend/: Cargo.toml  README.md  backend.rs  model.smithy
ainigma-backend/migrations/: 0001_ainigma.sql
ainigma-backend/src/: backend.rs  db.rs  lib.rs
ainigma-backend/src/errors/: filesystem.rs
ainigma-backend/tests/: quick_dev.rs
ainigma-backend/tests/data/courses/01908498-ac98-708d-b886-b6f2747ef785/: config.toml
ainigma-backend/tests/data/courses/01908498-ac98-708d-b886-b6f2747ef785/Network_Security_Fundamentals/task001/: build.sh
ainigma-backend/tests/data/courses/01908498-ac98-708d-b886-b6f2747ef785/Network_Security_Fundamentals/task002/output/01908498-ac98-708d-b886-b6f2747ef785/: readme.txt
ainigma/src/: build_process.rs  config.rs  flag_generator.rs  lib.rs  moodle.rs
ainigma/src/errors/: build.rs  config.rs  mod.rs
ainigma/src/snapshots/: ainigma__config__tests__batch_deserialization-2.snap
ainigma/src/storages/: storage.rs
ainigma/tests/: README.txt  batch_build.rs
ainigma/tests/data/configs/: batch_count.toml  simple_shell.toml
ainigma/tests/tasks/reverse1/: entrypoint.sh
moodle_xml/: README.txt
samples/tasks/simple_shell/: entrypoint.sh
src/: README.txt  build_process.rs  config.rs  flag_generator.rs  lib.rs  moodle.rs  storages.rs
src/errors/: base.rs  build.rs  config.rs  mod.rs
src/snapshots/: ainigma__config__tests__batch_deserialization-2.snap  ainigma__config__tests__batch_deserialization.snap  ainigma__config__tests__deployment_upload_config.snap  ainigma__config__tests__disabled_build_modes.snap  ainigma__config__tests__toml.snap
src/storages/: s3.rs  storage.rs  upload.rs
tests/: batch_build.rs  flag_tests.rs  sequential_build.rs
tests/data/configs/: batch_count.toml  default.toml  deployment_upload.toml  no_batch.toml  no_sequential.toml
tests/tasks/reverse1/: custom_entry.sh  source.cpp
tests/tasks/simple_shell/: build.sh
