[package]
name = "autograder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autograder_cli"

[dependencies]
sha3 = "0.10.8"
hmac = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
clap = { version = "4.5.15", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
