[package]
name = "autograder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"

[dependencies]
# For AWS S3
rust-s3 = "0.35"
# Our async runtime
tokio = { version = "1.40", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

# Crypto
sha3 = "0.10"
hmac = "0.12"
rand = "0.8"

serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = "0.8"

# Cli
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
] }
thiserror = "1.0.63"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = [] }
aws-sdk-s3 = { version = "1.49.0", default-features = false, features = [
    "rt-tokio",
] }
aws-config = { version = "1.5.6", default-features = false, features = [
    "client-hyper",
    "rt-tokio",
    "rustls",
] }
futures = "0.3.30"
[dependencies.uuid]
version = "1.9"
features = [
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
